Force installing latest certbot
This fixes the error

```
josepy.errors.DeserializationError: Deserialization error: Could not
decode 'status' ('ready'): Deserialization error: Status not recognized
2018-11-21 12:36:10,048:ERROR:certbot.log:An unexpected error occurred:
```

when generating a certificate.

By checking https://github.com/certbot/certbot/issues/5856 we managed to
trace back to the actual version of certbot that fixes this; 0.26.1. We
also found that the `letsencrypt` package does not contain all
dependencies (python3-certbot) and `certbot` should be used instead.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,12 +6,12 @@
 
 - name: Install certbot
   package:
-    name: letsencrypt
+    name: certbot=0.26.1-1+ubuntu16.04.1+certbot+2
     state: present
 
 - name: Install certbot-nginx plugin
   package:
-    name: python-certbot-nginx
+    name: python-certbot-nginx=0.25.0-2+ubuntu16.04.1+certbot+1
     state: present
 
 - name: Check if certificate already exists
