Use default value when expr. evaluates to false
According to http://jinja.pocoo.org/docs/2.10/templates/#default

>  If you want to use default with variables that evaluate to false you
> have to set the second parameter to true

This is the only way to use the default value when passing None, since
it evaluates to false.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,7 +16,7 @@
 
 - name: Check if certificate already exists
   stat:
-    path: "/etc/letsencrypt/live/{{ certbot_nginx_cert_name | default(domain_name) }}/cert.pem"
+    path: "/etc/letsencrypt/live/{{ certbot_nginx_cert_name | default(domain_name, true) }}/cert.pem"
   register: letsencrypt_cert
 
 - name: Generate new certificate if one doesn't exist
