--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,7 +10,9 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
+    - trusty
     - xenial
+    - bionic
 
   galaxy_tags:
     - certbot
