Add option to set certbot version via variable
Currently the role breaks when the hard coded version is missing from
the ppa.
This adds the option to specify the version to be installed via a variable.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,4 @@
 ---
 letsencrypt_staging: false
+certbot_version: 0.31.0-1+ubuntu{{ ansible_distribution_version }}.1+certbot+1
+certbot_nginx_version: 0.31.0-1+ubuntu{{ ansible_distribution_version }}.1+certbot+1
