--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,7 +6,11 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: instance
+  - name: instance-trusty
+    image: ubuntu:14.04
+  - name: instance-xenial
+    image: ubuntu:16.04
+  - name: instance-bionic
     image: ubuntu:18.04
 provisioner:
   name: ansible
