--- a/tasks/certificate.yml
+++ b/tasks/certificate.yml
@@ -6,21 +6,21 @@
 
 - name: Generate new certificate if one doesn't exist
   shell: >
-    "certbot certonly --nginx --email '{{ letsencrypt_email }}'
+    certbot certonly --nginx --email '{{ letsencrypt_email }}'
     --agree-tos -d '{{ domain_name }}'
     {% if certbot_nginx_cert_name is defined %}
     --cert-name '{{ certbot_nginx_cert_name }}'
     {% endif %}
-    {% if letsencrypt_staging %} --staging {% endif %}"
+    {% if letsencrypt_staging %} --staging {% endif %}
   when: not letsencrypt_cert.stat.exists
 
 - name: Force generation of a new certificate
   shell: >
-    "certbot certonly --force-renewal --nginx --email '{{ letsencrypt_email }}'
+    certbot certonly --force-renewal --nginx --email '{{ letsencrypt_email }}'
     --agree-tos -d '{{ domain_name }}'
     {% if certbot_nginx_cert_name is defined %}
     --cert-name '{{ certbot_nginx_cert_name }}'
     {% endif %}
-    {% if letsencrypt_staging %} --staging {% endif %}"
+    {% if letsencrypt_staging %} --staging {% endif %}
   when: letsencrypt_cert.stat.exists and certbot_force_update is defined
   notify: reload nginx
