--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,8 +3,7 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: yamllint
 platforms:
   - name: instance-xenial
     image: ubuntu:16.04
@@ -12,11 +11,9 @@ platforms:
     image: ubuntu:18.04
 provisioner:
   name: ansible
-  lint:
-    name: ansible-lint
+  lint: ansible-lint
 scenario:
   name: default
 verifier:
   name: testinfra
-  lint:
-    name: flake8
+  lint: flake8
