--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,7 +3,10 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint: yamllint
+lint: |
+  yamllint .
+  ansible-lint
+  flake8
 platforms:
   - name: instance-xenial
     image: ubuntu:16.04
@@ -11,9 +14,7 @@ platforms:
     image: ubuntu:18.04
 provisioner:
   name: ansible
-  lint: ansible-lint
 scenario:
   name: default
 verifier:
   name: testinfra
-  lint: flake8
