update package name for ubuntu 18

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Set Certbot package name and versions (Ubuntu < 20.04)
   set_fact:
-    certbot_version: 0.31.0-1+ubuntu{{ ansible_distribution_version }}.1+certbot+1
+    certbot_version: 0.31.0-2~deb10u1+ubuntu{{ ansible_distribution_version }}.1+certbot+3
     certbot_nginx_version: 0.31.0-1+ubuntu{{ ansible_distribution_version }}.1+certbot+1
     certbot_nginx_name: python-certbot-nginx
   when: ansible_distribution_version < "20.04"
