--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Set Certbot package name and versions (Ubuntu >= 22.04)
+  set_fact:
+    certbot_version: 1.21.0-1build1
+    certbot_nginx_version: 1.21.0-1
+    certbot_nginx_name: python3-certbot-nginx
+  when: ansible_distribution_version >= "22.04"
+
 - name: Set Certbot package name and versions (Ubuntu >= 20.04)
   set_fact:
     certbot_version: 0.40.0-1ubuntu0.1
